@@ -621,5 +621,34 @@ module Druid
       end
       alias_method "#{name}_h3".to_sym, "#{name}_element".to_sym
     end
+
+    #
+    # adds a method to retrieve the text of a h4 and a h4 element
+    #
+    # @example
+    #   h4(:title, :id => 'title')
+    #   # will generate a 'title' and 'title_element' method
+    #
+    # @param [String] the name used for the generated methods
+    # @param [Hash] identifier how we find a H4.  You can use a multiple paramaters
+    #   by combining of any of the following except xpath.  The valid keys are:
+    #   * :class
+    #   * :id
+    #   * :index
+    #   * :name
+    #   * :xpath
+    # @param optional block to be invoked when element method is called
+    #
+    def h4(name, identifier=nil, &block)
+      define_method(name) do
+        return h4_text_for identifier.clone unless block_given?
+        self.send("#{name}_element").text
+      end
+      define_method("#{name}_element") do
+        return call_block(&block) if block_given?
+        h4_for(identifier.clone)
+      end
+      alias_method "#{name}_h4".to_sym, "#{name}_element".to_sym
+    end
   end
 end
